# rag-and-synthetic-data

./: .gitignore  .gitignore~  .gitmodules  README.md  pyproject.toml
services/rag/: README.md  app.py  pyproject.toml
services/rag/.streamlit/: config.toml
services/rag/docs-db/collection/documents/: storage.sqlite
services/rag/src/: chain.py  config.py  ingestor.py  model.py  retriever.py  uploader.py
services/synthetic_csv/: README.md  custom_dataset.csv  generate.py
services/synthetic_pdf/: README.md  generator.py  wrapper.py
tmp/: synthetic_dataset.csv
